# stubzen

./: pyproject.toml
src/stubzen/: __init__.py  __main__.py  cli.py  config.py  constants.py  discovery.py  generation.py  generator.py  import_generation.py  planning.py
src/stubzen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/stubzen/commands/: clean.py  generate.py  install.py  watch.py
src/stubzen/signature_extraction/: dataclasses.py  extractor.py  type_resolver.py
src/stubzen/signature_extraction/member_processor/: base.py  init.py  standard.py
src/stubzen/signature_extraction/signature_creator/: base.py  method.py  property.py  synthetic.py  variable.py
src/stubzen/utils/: ast.py  finder.py  logging.py
