[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stubzen"
version = "0.1.0"
description = "A short description of your package"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Add your dependencies here
    # "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/yourusername/my-shared-package"
Repository = "https://github.com/yourusername/my-shared-package"

[tool.hatch.build.targets.wheel]
packages = ["src/stubzen"]